<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/q2"
        android:layout_weight="0.41"
        android:gravity="center"
        android:textSize="25dp"/>

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/option1"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:text="@string/q2o1" />

        <RadioButton
            android:id="@+id/option2"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:text="@string/q2o2" />

        <RadioButton
            android:id="@+id/option3"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:text="@string/q2o3" />
    </RadioGroup>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.50" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/pbtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="back" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3" />

        <Button
            android:id="@+id/nbtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="next" />

    </LinearLayout>

</LinearLayout>