<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Please check the result"
        android:textSize="30dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Name"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/showingname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="15dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/q1"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/showingq1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="15dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/q2"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/showingq2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="15dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/q3"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/showingq3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="15dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_weight="0.14" />

    <Button
        android:id="@+id/reportbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="save survey and see report" />

    <Button
        android:id="@+id/restartbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="start over" />

</LinearLayout>